# raggate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: eval.yml  publish.yml
docs/: demo.tape  good-first-issues.md
docs/recipes/: github-actions.md  pytest.md
evals/: gates.high-stakes.yaml  gates.yaml  target.py
examples/quickstart/: README.md  golden.json  target.py
scripts/: sync_evals.py
src/raggate/: __init__.py  cli.py  config.py  dataset.py  gates.py  judge.py  report.py  runner.py  scorers.py  templates.py  text.py
tests/: conftest.py  test_config.py  test_dataset.py  test_gates.py  test_judge.py  test_meta.py  test_report.py  test_runner.py  test_scorers.py
